Bug 691634 - fapiufst.c not updated with revision 11711
Summary: fapiufst.c not updated with revision 11711
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Font API (show other bugs)
Version: 9.00
Hardware: PC Windows XP
: P2 normal
Assignee: Chris Liddell (chrisl)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-21 10:55 UTC by norbert.janssen
Modified: 2011-10-02 02:35 UTC (History)
0 users

See Also:
Customer: 661
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description norbert.janssen 2010-09-21 10:55:04 UTC
the max_bitmap and use_outline initializers are missing in the FAPI_server If0 struct (line 1306)

I.e. languageswitch with ufst fails
Comment 1 Chris Liddell (chrisl) 2010-09-21 12:07:00 UTC
fixed in r11732.

I would urge extreme caution in using the UFST integration with the Postscript interpreter - even using it purely to access the Microtype font set, there are problems with its use.

An update is planned for the near future which resolves these issues, and gives full PS font functionality.