Add the new entries for produce outlines and maximum bitmap size to the FAPI server declarations in the UFST and Bitstream code.

No cluster differences expected.

Bug 691634

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11732 a1074d23-0009-0410-80fe-cf8c14f379e6